# TestSystem

./: CMakeLists.txt  administratorwindow.cpp  administratorwindow.h  administratorwindow.ui  changejudgewindow.cpp  changejudgewindow.h  changejudgewindow.ui  changemulwindow.cpp  changemulwindow.h  changemulwindow.ui  changeshortwindow.cpp  changeshortwindow.h  changeshortwindow.ui  changesinglewindow.cpp  changesinglewindow.h  changesinglewindow.ui  config.h  judgewindow.cpp  judgewindow.h  judgewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mulselectwindow.cpp  mulselectwindow.h  mulselectwindow.ui  networkmanager.cpp  networkmanager.h  questionmanagewindow.cpp  questionmanagewindow.h  questionmanagewindow.ui  shortanswerwindow.cpp  shortanswerwindow.h  shortanswerwindow.ui  singleselectwindow.cpp  singleselectwindow.h  singleselectwindow.ui  studentwindow.ui  teacherwindow.cpp  teacherwindow.h  (+15 more)
server/: exam_system.py  readme.txt
